--- a/LOTAWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LOTAWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -34,10 +34,11 @@
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
                 
-                <div class="text-center">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
+                <div class="forgot-password-link">
+                    <a id="forgot-password" asp-page="./ForgotPassword">
+                        <i class="fas fa-key"></i>
+                        Forgot your password?
+                    </a>
                 </div>
             </form>
         </section>
