--- a/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
@@ -336,7 +336,7 @@
                             <li><strong>Email</strong> (Required)</li>
                             <li><strong>Student ID</strong> (Required)</li>
                         </ul>
-                        <p class="mb-0 mt-2"><small><strong>Note:</strong> Password will be automatically generated as "Student123!"</small></p>
+                        <p class="mb-0 mt-2"><small><strong>Note:</strong> The default password will be automatically generated and sent to the email address"</small></p>
                     </div>
                     <div class="mb-3">
                         <a href="/Admin/Student/DownloadTemplate" class="btn btn-outline-primary btn-sm">
