--- a/LOTAWeb/Views/Shared/_Layout.cshtml
+++ b/LOTAWeb/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@
                     }
                     
                     <!-- Change Password Section - Available for all roles -->
-                   @*  @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated)
                     {
                         <!-- Subtle Divider -->
                         <div class="nav-divider"></div>
@@ -227,7 +227,7 @@
                                 Change Password
                             </a>
                         </li>
-                    } *@
+                    }
                 </ul>
             </div>
         </nav>
