--- a/LOTAWeb/Areas/Tutor/Views/Home/Index.cshtml
+++ b/LOTAWeb/Areas/Tutor/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <p class="text-muted mb-0">
-                        Welcome to the Learning Outcome Tracking and Assessment (LOTA) system. 
+                        Welcome to the Learning Outcome Tracking and Application (LOTA) system. 
                         This portal provides you with tools to manage your courses, assessments, 
                         and track student learning outcomes effectively.
                     </p>
